--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,22 @@ body {
 }
 
 body {
-  
+  margin: 0;
+  color: #4D4D4D;
+  height: 100vh;
+  background-color: white;
+  @media (prefers-color-scheme: dark) {
+    color: white;
+    background-color: #4D4D4D;
+  }
+}
+
+main {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (prefers-color-scheme: dark) {
