--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,17 @@ body {
 }
 
 main {
-  height: 100vh;
+  padding: 60px 0;
+  height: calc(100vh - 120px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.slide{
+  padding: 20px;
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
