--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,12 @@ main {
   align-items: center;
 }
 
+h1 {
+  padding-top: 60px;
+  position: absolute;
+  transition: top 1s;
+}
+
 .slide{
   width: 100%;
   padding: 20px;
