--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,11 @@
+/* Theme Color */
+:root {
+  --primary: #00AEEF;
+  --secondary: #4D4D4D;
+  --light: #EAEFF2;
+  --dark: #2F2F2F;
+}
+
 html,
 body {
   max-width: 100vw;
@@ -6,12 +14,12 @@ body {
 
 body {
   margin: 0;
-  color: #4D4D4D;
+  color: var(--dark);
   height: 100vh;
   background-color: white;
   @media (prefers-color-scheme: dark) {
     color: white;
-    background-color: #4D4D4D;
+    background-color: var(--dark);
   }
 }
 
