--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,6 +48,20 @@ h1 {
 	}
 }
 
+h2 {
+  text-align: center;
+}
+
+img {
+  display: none;
+}
+@media screen and (min-width: 888px) {
+	/* スマホ */
+	img{
+    display: block;
+	}
+}
+
 .slide{
   width: 100%;
   padding: 20px;
