--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,6 +62,16 @@ img {
 	}
 }
 
+span {
+  font-size: 1rem;
+}
+@media screen and (min-width: 480px) {
+	/* スマホ */
+	span{
+    font-size: 1.2rem;
+	}
+}
+
 .slide{
   width: 100%;
   padding: 20px;
