--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,14 +13,10 @@ body {
 }
 
 body {
-  margin: 0;
-  color: var(--dark);
   height: 100vh;
-  background-color: white;
-  @media (prefers-color-scheme: dark) {
-    color: white;
-    background-color: var(--dark);
-  }
+  margin: 0;
+  color: white;
+  background-color: var(--dark);
 }
 
 main {
@@ -49,15 +45,17 @@ h1 {
 }
 
 h2 {
+  width: fit-content;
   text-align: center;
+  border-bottom: 1px solid white;
 }
 
-img {
+.profile-image {
   display: none;
 }
 @media screen and (min-width: 888px) {
 	/* スマホ */
-	img{
+	.profile-image {
     display: block;
 	}
 }
@@ -85,10 +83,4 @@ li {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
